--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,11 +13,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header />
 		<main>
-			<h1>🧑‍🚀 Hello, Markplays!</h1>
+			<h1> Hello, Markplays!</h1>
 			<p>
-				Welcome to the official Markplays blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
+				안녕하세요. 마크플레이스에 방문해 주신 여러분을 환영합니다.
+                제가 경험하고 느낀 다양한 이야기를 블로그에 기록할 목적으로 만들었습니다.
+                새로운 것은 언제나 저에게 새로운 꿈과 희망을 만들어 주는 것 같습니다.
 			</p>
 			<p>
 				This template comes with a few integrations already configured in your
