--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,10 +22,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                 새로운 것은 언제나 저에게 새로운 꿈과 희망을 만들어 주는 것 같습니다.
 			</p>
 			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
+				마크플레이스에서는
 			</p>
 			<p>Here are a few ideas on how to get started with the template:</p>
 			<ul>
